# tatou

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  flag  requirements.txt  server.py
.github/workflows/: ci-cd.yml
db/: tatou.sql
server/: API.md  Dockerfile  entrypoint.sh  flag  pyproject.toml
server/src/: PawStamp_watermark.py  add_after_eof.py  bash_bridge_append_eof.py  metadata_watermark.py  multi_location_watermark.py  server.py  toy_bridge_eof.py  toy_comment.py  unsafe_bash_bridge_append_eof.py  watermarking_cli.py  watermarking_method.py  watermarking_utils.py
server/src/static/: documents.html  index.html  login.html  signup.html  style.css
server/test/: __init__.py  conftest.py  test_api.py  test_watermarking_all_methods.py
server/test/integration/: test_api.py  test_api_auth.py  test_api_documents.py  test_api_plugins.py  test_api_watermarking.py
server/test/unit/: test_add_after_eof.py  test_bash_bridge_append_eof.py  test_metadata_watermark.py  test_multi_location_watermark.py  test_pawstamp_watermark.py  test_toy_bridge_eof.py  test_toy_comment.py  test_unsafe_bash_bridge_append_eof.py  test_watermarking_all_methods.py  test_watermarking_cli.py  test_watermarking_method.py  test_watermarking_utils.py
server/tests/: conftest.py  test_unsafe_bash_bridge.py  test_watermarking_all_methods.py  test_watermarking_cli.py
tests/: test_add_after_eof.py  test_api.py  test_watermarking_all_methods.py  test_watermarking_methods.py  test_watermarking_utils.py
